$Id: NEWS,v 1.438 2003-05-26 01:48:25 jwm Exp $

CVS
---------------------------------
- Bug 2051 - freebytes in TransferRate does not work properly.
- Bug 2043 - Proftpd converts LF to CRLF on PUT on Cygwin.  This turned out
  to be caused by the Cygwin layer.  The fix was to use the Cygwin-specific
  O_BINARY open() flag when opening binary files on Cygwin.
- Bug 1804 - Permit selection of additional contrib modules when building the RPM

1.2.9rc1 - Released 15-May-2003
---------------------------------
- Bug 1828 - mod_sql can only find mysql.sock if in /tmp.  This was caused
  by the fact that mod_sql_mysql did not load/read the MySQL .cnf
  configuration files.  Now, when starting, mod_sql_mysql will read .cnf
  files for "client" sections.
- Bug 1960 - Add removed file size by DELE command to xferlog.
- Bug 1967 - Add display of uptime to ftpwho, ftptop.
- Added AnonRejectPasswords directive.
- Added ftpshut -D command-line option, for deleting the ftpshut shutdown
  file.
- Bug 1972 - %T not correctly shows time at performance of a command "rename".
  This was due to improper use of uninitialized data.
- Bug 1794 - Scoreboard format changes.
- Bug 1979 - Add TLSTimeoutHandshake directive.  This adds a directive to
  configure a timer when SSL/TLS handshakes are occurring, to prevent
  a malicious client from attempting to DOS a TLS-enabled server.  The default
  timeout is 5 minutes.
- Bug 1869 - Add option "-S/--server" to ftpcount, ftptop, ftpwho.  This
  option can be used to specify a ServerName; the utilities will then
  display information for that specific server.
- Bug 1980 - Login with incorrect password possible when using mod_radius.
  This was caused by the retaining of the OK state when a user authenticated
  via RADIUS, but the login process later fails (e.g. home directory
  inaccessible or something similar); subsequent logging in as a different
  user would succeed because the OK flag was not cleared.